[package]
name = "gm_tungstenite"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = [ "cdylib" ]
name = "gmsv_tungstenite"

[dependencies]
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
gmodx = "0.16.4"

[dependencies.tungstenite]
version = "0.28.0"
features = [ "native-tls" ]

[dependencies.uuid]
version = "1.19.0"
features = [ "v4" ]