[package]
name = "gmsv_tungstenite"
version = "1.1.0-beta.2"
edition = "2024"

[lib]
crate-type = [ "cdylib" ]
name = "gmsv_tungstenite"

[dependencies]
anyhow = "1.0.102"
futures-util = "0.3.31"

[dependencies.gmodx]
git = "https://github.com/Srlion/gmodx-rs"
features = [ "tokio" ]

[dependencies.tokio]
version = "1.50.0"
features = [ "rt-multi-thread", "macros", "time" ]

[dependencies.tokio-util]
version = "0.7.18"
features = [ "rt" ]

[dependencies.tokio-tungstenite]
version = "0.29.0"
features = [ "native-tls" ]

[dependencies.uuid]
version = "1.22.0"
features = [ "v4" ]

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
strip = "symbols"
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
lto = "off"
strip = "none"
panic = "unwind"
